Revert "Added features"

--- a/check.html
+++ b/check.html
@@ -1,279 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ProCourse | Learn Anytime</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r148/three.min.js"></script>
-  <style>
-    body { scroll-behavior: smooth; font-family: 'Segoe UI', sans-serif; }
-    .navbar { background-color: #343a40; }
-    .navbar-nav .nav-link { color: #fff !important; margin-right: 15px; }
-    .hero { position: relative; height: 100vh; color: white; text-align: center; display: flex; align-items: center; justify-content: center; overflow: hidden; }
-    #three-bg { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 0; }
-    .hero-content { position: relative; z-index: 1; }
-    .section-padding { padding: 60px 0; }
-    .testimonial, .faq { background-color: #f8f9fa; }
-    .footer { background-color: #343a40; color: #fff; padding: 30px 0; text-align: center; }
-    .card:hover { box-shadow: 0 5px 15px rgba(0,0,0,0.2); transition: 0.3s; }
-    .faq-item { margin-bottom: 15px; cursor: pointer; }
-    .faq-answer { display: none; padding: 10px; background-color: #e9ecef; border-radius: 5px; }
-    .newsletter input[type=email] { width: 100%; padding: 10px; margin-top: 10px; }
-    .countdown { font-size: 2rem; font-weight: bold; color: #dc3545; }
-  </style>
-</head>
-<body>
-
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="#">ProCourse</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navMenu">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
-        <li class="nav-item"><a class="nav-link" href="#curriculum">Curriculum</a></li>
-        <li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a></li>
-        <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
-        <li class="nav-item"><a class="nav-link" href="#instructor">Instructor</a></li>
-        <li class="nav-item"><a class="nav-link" href="#faq">FAQs</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<!-- Hero -->
-<header class="hero" id="home">
-  <canvas id="three-bg"></canvas>
-  <div class="hero-content">
-    <h1 class="display-4">Master Web Development</h1>
-    <p class="lead">Join our best-selling course and start your tech career today!</p>
-    <div class="countdown" id="countdown"></div>
-    <a href="#pricing" class="btn btn-primary btn-lg mt-3">Enroll Now</a>
-  </div>
-</header>
-
-<!-- About -->
-<section id="about" class="section-padding text-center">
-  <div class="container">
-    <h2>About the Course</h2>
-    <p>Learn full-stack web development with HTML, CSS, JS, React, and more. Step-by-step modules, live projects, and expert guidance.</p>
-  </div>
-</section>
-
-<!-- Features -->
-<section id="features" class="bg-light section-padding">
-  <div class="container">
-    <h2 class="text-center mb-5">What You'll Learn</h2>
-    <div class="row text-center">
-      <div class="col-md-4">
-        <div class="card p-4">
-          <h4>Frontend Development</h4>
-          <p>HTML, CSS, JavaScript, Bootstrap, React</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card p-4">
-          <h4>Backend & Databases</h4>
-          <p>Node.js, Express, MongoDB, MySQL</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card p-4">
-          <h4>Project Building</h4>
-          <p>Build and deploy real-world projects</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Curriculum -->
-<section id="curriculum" class="section-padding">
-  <div class="container">
-    <h2 class="text-center">Curriculum</h2>
-    <ul class="list-group mt-4">
-      <li class="list-group-item">Module 1: HTML & CSS Basics</li>
-      <li class="list-group-item">Module 2: JavaScript Essentials</li>
-      <li class="list-group-item">Module 3: Advanced JS + Projects</li>
-      <li class="list-group-item">Module 4: Backend with Node & Express</li>
-      <li class="list-group-item">Module 5: MongoDB & Deployment</li>
-    </ul>
-  </div>
-</section>
-
-<!-- Pricing -->
-<section id="pricing" class="section-padding">
-  <div class="container text-center">
-    <h2>Pricing</h2>
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card p-4">
-          <h3>₹4999</h3>
-          <p>Lifetime access, all updates, 24/7 support</p>
-          <button class="btn btn-success">Buy Now</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Testimonials -->
-<section id="testimonials" class="testimonial section-padding">
-  <div class="container text-center">
-    <h2>What Our Students Say</h2>
-    <div class="row mt-4">
-      <div class="col-md-4">
-        <blockquote class="blockquote">
-          <p>"Amazing course! Landed my first job in 3 months."</p>
-          <footer class="blockquote-footer">Riya Sharma</footer>
-        </blockquote>
-      </div>
-      <div class="col-md-4">
-        <blockquote class="blockquote">
-          <p>"Best investment I've made in my career."</p>
-          <footer class="blockquote-footer">Aman Verma</footer>
-        </blockquote>
-      </div>
-      <div class="col-md-4">
-        <blockquote class="blockquote">
-          <p>"Great mentor and real-time project experience."</p>
-          <footer class="blockquote-footer">Pooja Rao</footer>
-        </blockquote>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Instructor -->
-<section id="instructor" class="section-padding text-center">
-  <div class="container">
-    <h2>Meet Your Instructor</h2>
-    <img src="https://via.placeholder.com/150" class="rounded-circle my-3" alt="Instructor">
-    <p><strong>Shashank Singh Chauhan</strong> — 8+ years of experience in software development, trainer for 1000+ students.</p>
-  </div>
-</section>
-
-<!-- FAQ -->
-<section id="faq" class="faq section-padding">
-  <div class="container">
-    <h2 class="text-center">Frequently Asked Questions</h2>
-    <div class="faq-item mt-4">
-      <h5>Is this course beginner-friendly?</h5>
-      <div class="faq-answer">Yes! No prior coding experience is needed.</div>
-    </div>
-    <div class="faq-item">
-      <h5>How long will I have access?</h5>
-      <div class="faq-answer">You get lifetime access with all updates included.</div>
-    </div>
-    <div class="faq-item">
-      <h5>Will I get a certificate?</h5>
-      <div class="faq-answer">Yes, after completion you’ll receive a certificate.</div>
-    </div>
-  </div>
-</section>
-
-<!-- Contact -->
-<section id="contact" class="section-padding">
-  <div class="container">
-    <h2 class="text-center">Contact Us</h2>
-    <form class="row g-3 mt-4">
-      <div class="col-md-6">
-        <input type="text" class="form-control" placeholder="Your Name" required>
-      </div>
-      <div class="col-md-6">
-        <input type="email" class="form-control" placeholder="Email" required>
-      </div>
-      <div class="col-12">
-        <textarea class="form-control" rows="4" placeholder="Message"></textarea>
-      </div>
-      <div class="col-12 text-center">
-        <button type="submit" class="btn btn-primary">Send Message</button>
-      </div>
-    </form>
-  </div>
-</section>
-
-<!-- Newsletter Signup -->
-<section class="section-padding text-center newsletter bg-light">
-  <div class="container">
-    <h2>Subscribe to our Newsletter</h2>
-    <input type="email" class="form-control mt-3" placeholder="Enter your email">
-    <button class="btn btn-dark mt-2">Subscribe</button>
-  </div>
-</section>
-
-<!-- Footer -->
-<footer class="footer">
-  <div class="container">
-    <p>&copy; 2025 ProCourse. All rights reserved.</p>
-  </div>
-</footer>
-
-<!-- Scripts -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-  // Smooth Scroll
-  $(document).ready(function () {
-    $('.nav-link').on('click', function () {
-      var target = $(this).attr('href');
-      $('html, body').animate({ scrollTop: $(target).offset().top - 70 }, 800);
-    });
-
-    // FAQ Toggle
-    $('.faq-item h5').on('click', function () {
-      $(this).next('.faq-answer').slideToggle();
-    });
-
-    // Countdown Timer
-    const deadline = new Date(Date.now() + 5 * 24 * 60 * 60 * 1000);
-    const countdown = setInterval(() => {
-      const now = new Date().getTime();
-      const distance = deadline - now;
-      const d = Math.floor(distance / (1000 * 60 * 60 * 24));
-      const h = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-      const m = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-      const s = Math.floor((distance % (1000 * 60)) / 1000);
-      document.getElementById('countdown').innerHTML = `${d}d ${h}h ${m}m ${s}s`;
-      if (distance < 0) clearInterval(countdown);
-    }, 1000);
-  });
-
-  // Three.js Animated Background
-  let scene = new THREE.Scene();
-  let camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-  let renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('three-bg'), alpha: true });
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  
-  let geometry = new THREE.TorusKnotGeometry(10, 3, 100, 16);
-  let material = new THREE.MeshStandardMaterial({ color: 0xff0000 });
-  let torus = new THREE.Mesh(geometry, material);
-  scene.add(torus);
-
-  let light = new THREE.PointLight(0xffffff, 1);
-  light.position.set(50, 50, 50);
-  scene.add(light);
-
-  camera.position.z = 30;
-
-  function animate() {
-    requestAnimationFrame(animate);
-    torus.rotation.x += 0.01;
-    torus.rotation.y += 0.01;
-    renderer.render(scene, camera);
-  }
-  animate();
-  window.addEventListener('resize', () => {
-    camera.aspect = window.innerWidth / window.innerHeight;
-    camera.updateProjectionMatrix();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-  });
-</script>
-</body>
-</html>
+<h1>hello check</h1>
